force-app/main/default/objects/UB_Callout_Framework__mdt/UB_Callout_Framework__mdt.object-meta.xml
<CustomObject>
    <label>UB Callout Framework</label>
    <pluralLabel>UB Callout Frameworks</pluralLabel>
</CustomObject>