force-app/main/default/objects/UB_Callout_Framework__mdt/fields/Auth_Token_c__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token_c__c</fullName>
    <label>Auth_Token__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>