force-app/main/default/objects/UB_Callout_Framework__mdt/fields/Extra_Param_s__c.field-meta.xml
<CustomField>
    <fullName>Extra_Param_s__c</fullName>
    <label>Extra Param(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>