force-app/main/default/objects/UB_Callout_Framework__mdt/fields/HeaderParams__c.field-meta.xml
<CustomField>
    <fullName>HeaderParams__c</fullName>
    <label>HeaderParams</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>