force-app/main/default/objects/UB_Callout_Framework__mdt/fields/Mock_Response__c.field-meta.xml
<CustomField>
    <fullName>Mock_Response__c</fullName>
    <label>Mock Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>