force-app/main/default/objects/UB_Callout_Framework__mdt/fields/Timeout_Time__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Time__c</fullName>
    <label>Timeout Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>