force-app/main/default/objects/UB_Callout_Framework__mdt/fields/URL_Parameters__c.field-meta.xml
<CustomField>
    <fullName>URL_Parameters__c</fullName>
    <label>URL Parameter(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>